[package]
name = "humblebundle-games"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
reqwest = "0.11"
tokio = { version = "1.33", features = ["full"] }
scraper = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.29"
rayon = "1.8"
indicatif = "0.17"
regex = "1.10.2"
url = "2.4.1"
