[package]
name = "humblebundle-games"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = "0.11"
tokio = { version = "1.33", features = ["full"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
rayon = "1.8"
indicatif = "0.17"
regex = "1.10"
url = "2.4"
csv = "1.3"
