[package]
name = "humblebundle-games"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
reqwest = { version = "0.13.4", features = ["query"] }
tokio = { version = "1.52.3", features = ["full"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
futures = "0.3.32"
rayon = "1.12.0"
indicatif = "0.18.4"
regex = "1.12.4"
url = "2.5.8"
csv = "1.4.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
tempfile = "3.27.0"
